--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>glow-up-online-app</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>DevPorto Beauty</title>
+    <meta name="description" content="Projeto Salão de Beleza" />
+    <meta name="author" content="DevPorto" />
 
-    <meta property="og:title" content="glow-up-online-app" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="DevPorto Beauty" />
+    <meta property="og:description" content="Projeto Salão de Beleza" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://devporto.dev" />
   </head>
 
   <body>
